--- a/index.html
+++ b/index.html
@@ -8,22 +8,57 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
+    <!-- font awesome -->
+      <!-- Font Awesome -->
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">  
     <!-- tailwindcss -->
     <script src="https://cdn.tailwindcss.com"></script>
-</head>
-<body>
-    
-
-<script>
-    tailwind.config = {
-      theme: {
-        extend: {
-          colors: {
-            clifford: '#da373d',
+    <script>
+        tailwind.config = {
+          theme: {
+            extend: {
+              colors: {
+                clifford: '#da373d',
+              }
+            }
           }
         }
-      }
-    }
-  </script>
+      </script>
+</head>
+<body>
+    <!-- main content -->
+    <main class="max-w-screen-xl mx-auto px-16 lg:px-28">
+        <!-- header section starts here -->
+        <header class="lg:flex pt-10 mb-20 border border-purple-700">
+            <!-- Text content -->
+            <div class="">
+                <h1 class="text-7xl">It's good <br>
+                tea time at The
+                Tea House</h1>
+                <br>
+                <p class="text-gray-500">Tea and Botanical Solutions Supplier Give Optimum <br>Satisfaction To Your Taste Buds.</p>
+                <br>
+                <button class="py-3 px-5 m-2 rounded text-white font-semibold bg-gradient-to-r from-orange-500 to-red-500">Explore More <i class="-rotate-45 fa-solid fa-arrow-right"></i></button>
+            </div>
+
+
+            <!-- image content -->
+            <div>
+              <img src="images/banner.png" alt="">
+            </div>
+            <!-- card -->
+            <div>
+              <!-- WILL DO IT LATER -->
+            </div>
+        </header>
+        <!-- header section ends here -->
+
+        <section class="py-8 lg:py-24">
+          <h1 class="text-3xl font-bold mb-5 text-center">Our Featured Products</h1>
+          <p class="text-gray-500 mx-auto max-w-xl">There are many variations fo lorem ipsum available. but the majority have suffered alteration in some form bu injected humour or randomised words which don't look even slightly believable.</p>
+
+          
+        </section>
+    </main>
 </body>
 </html>
