added featured products section

--- a/index.html
+++ b/index.html
@@ -44,21 +44,61 @@
 
             <!-- image content -->
             <div>
-              <img src="images/banner.png" alt="">
+            	<img src="images/banner.png" alt="">
             </div>
             <!-- card -->
             <div>
-              <!-- WILL DO IT LATER -->
-            </div>
+        		<!-- WILL DO IT LATER -->
+        	</div>
         </header>
         <!-- header section ends here -->
 
-        <section class="py-8 lg:py-24">
-          <h1 class="text-3xl font-bold mb-5 text-center">Our Featured Products</h1>
-          <p class="text-gray-500 mx-auto max-w-xl">There are many variations fo lorem ipsum available. but the majority have suffered alteration in some form bu injected humour or randomised words which don't look even slightly believable.</p>
 
-          
+        <!-- featured section starts here -->
+        <section class="py-8 lg:py-24">
+        	<h1 class="text-3xl font-bold mb-5 text-center">Our Featured Products</h1>
+        	<p class="text-gray-500 mx-auto max-w-xl">There are many variations fo lorem ipsum available. but the majority have suffered alteration in some form bu injected humour or randomised words which don't look even slightly believable.</p>
+
+          <div class="grid grid-cols-1 lg:grid-cols-4 gap-6">
+            <!-- product 01 -->
+        	<div class="rounded-lg shadow-md items-center bg-gray-50 p-6">
+            	<img class="mx-auto pt-2" src="images/tea-1.png" alt="">
+				<div class="text-center">
+					<h2 class="font-bold text-xl">Matcha Latte</h2>
+					<p class="text-gray-500">Creamer could be replaced by fresh milk</p>
+				</div>
+        	</div>
+
+			<!-- product 02 -->
+			<div class="rounded-lg shadow-md items-center bg-gray-50 p-6">
+            	<img class="mx-auto pt-2" src="images/tea-1.png" alt="">
+				<div class="text-center">
+					<h2 class="font-bold text-xl">Matcha Latte</h2>
+					<p class="text-gray-500">Creamer could be replaced by fresh milk</p>
+				</div>
+        	</div>
+
+			<!-- product 03 -->
+			<div class="rounded-lg shadow-md items-center bg-gray-50 p-6">
+            	<img class="mx-auto pt-2" src="images/tea-1.png" alt="">
+				<div class="text-center">
+					<h2 class="font-bold text-xl">Matcha Latte</h2>
+					<p class="text-gray-500">Creamer could be replaced by fresh milk</p>
+				</div>
+        	</div>
+
+			<!-- product 04 -->
+			<div class="rounded-lg shadow-md items-center bg-gray-50 p-6">
+            	<img class="mx-auto pt-2" src="images/tea-1.png" alt="">
+				<div class="text-center">
+					<h2 class="font-bold text-xl">Matcha Latte</h2>
+					<p class="text-gray-500">Creamer could be replaced by fresh milk</p>
+				</div>
+        	</div>
+        </div>
         </section>
+        <!-- featured section ends here -->
+
     </main>
 </body>
 </html>
