--- a/index.html
+++ b/index.html
@@ -59,39 +59,39 @@
         	<h1 class="text-3xl font-bold mb-5 text-center">Our Featured Products</h1>
         	<p class="text-gray-500 mx-auto max-w-xl">There are many variations fo lorem ipsum available. but the majority have suffered alteration in some form bu injected humour or randomised words which don't look even slightly believable.</p>
 
-          <div class="grid grid-cols-1 lg:grid-cols-4 gap-6">
+          <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
             <!-- product 01 -->
         	<div class="rounded-lg shadow-md items-center bg-gray-50 p-6">
             	<img class="mx-auto pt-2" src="images/tea-1.png" alt="">
 				<div class="text-center">
-					<h2 class="font-bold text-xl">Matcha Latte</h2>
+					<h2 class="font-bold py-2 text-xl">Matcha Latte</h2>
 					<p class="text-gray-500">Creamer could be replaced by fresh milk</p>
 				</div>
         	</div>
 
 			<!-- product 02 -->
 			<div class="rounded-lg shadow-md items-center bg-gray-50 p-6">
-            	<img class="mx-auto pt-2" src="images/tea-1.png" alt="">
+            	<img class="mx-auto pt-2" src="images/tea-2.png" alt="">
 				<div class="text-center">
-					<h2 class="font-bold text-xl">Matcha Latte</h2>
+					<h2 class="font-bold py-2 text-xl">Milk Tea</h2>
 					<p class="text-gray-500">Creamer could be replaced by fresh milk</p>
 				</div>
         	</div>
 
 			<!-- product 03 -->
 			<div class="rounded-lg shadow-md items-center bg-gray-50 p-6">
-            	<img class="mx-auto pt-2" src="images/tea-1.png" alt="">
+            	<img class="mx-auto pt-2" src="images/tea-3.png" alt="">
 				<div class="text-center">
-					<h2 class="font-bold text-xl">Matcha Latte</h2>
+					<h2 class="font-bold py-2 text-xl">Fruit Tea</h2>
 					<p class="text-gray-500">Creamer could be replaced by fresh milk</p>
 				</div>
         	</div>
 
 			<!-- product 04 -->
 			<div class="rounded-lg shadow-md items-center bg-gray-50 p-6">
-            	<img class="mx-auto pt-2" src="images/tea-1.png" alt="">
+            	<img class="mx-auto pt-2" src="images/tea-4.png" alt="">
 				<div class="text-center">
-					<h2 class="font-bold text-xl">Matcha Latte</h2>
+					<h2 class="font-bold py-2 text-xl">Ice Tea</h2>
 					<p class="text-gray-500">Creamer could be replaced by fresh milk</p>
 				</div>
         	</div>
@@ -99,6 +99,215 @@
         </section>
         <!-- featured section ends here -->
 
+
+		<!-- 2col section starts here -->
+		<section class="mb-24">
+			<div class="grid grid-cols-1 lg:grid-cols-2">
+			  <!-- Image Section -->
+			  <div class="grid grid-cols-2 grid-rows-3 gap-4 lg:w-5/6">
+				<div
+				  class="h-38 bg-gradient-to-r from-red-100 to-red-50 rounded-xl"
+				></div>
+				<div class="bg-orange-50 rounded-xl row-span-2">
+				  <img class="mx-auto my-5" src="./images/fresh-1.png" alt="" />
+				</div>
+				<div class="bg-stone-100 rounded-xl row-span-2">
+				  <img class="mx-auto my-5" src="./images/fresh-2.png" alt="" />
+				</div>
+				<div
+				  class="h-38 bg-gradient-to-r from-stone-200 to-stone-100 rounded-xl"
+				></div>
+			  </div>
+			  <!-- Text Section -->
+			  <div>
+				<h1 class="text-5xl font-bold mb-5">
+				  Great Tea, Freshly Presented
+				</h1>
+				<p class="text-gray-500">
+				  The meaning of gong cha is chanese is to provide the best tea to
+				  emperor from all possessions . It represents the highest quality
+				  and self expectation. Establishing in 2006, Gong cha had been
+				  deeply appreciated by its custoers because of good words of mouth
+				  and unique customized service orginated from Taiwan.
+				</p>
+				<br />
+				<h1 class="text-2xl font-bold mb-5">Unique Taste</h1>
+				<p class="text-gray-500">
+				  A Unique and different style from other teapots gives a luxurious
+				  and minimalist impression
+				</p>
+				<br />
+				<h1 class="text-2xl font-bold mb-5">Premium Quality</h1>
+				<p class="text-gray-500">
+				  Premium Quality that makes tea more elegant and more durable when
+				  you use it.
+				</p>
+			  </div>
+			</div>
+		  </section>
+		<!-- 2col section ends here -->
+
+		<!-- Reviews Section starts here -->
+		<section class="mb-24">
+			<div
+			  class="bg-gradient-to-r from-orange-500 to-red-500 rounded-xl grid grid-cols-1 lg:grid-cols-2 text-white px-7 md:px-16"
+			>
+			  <!-- Text Section -->
+			  <div class="flex justify-center items-center overflow-hidden">
+				<div class="w-5/6">
+				  <h1 class="text-5xl font-bold mb-5 mt-10">
+					Meet Our Super Clients
+				  </h1>
+				  <p class="mb-5">
+					There are many variations of passages of Lorem Ipsum available,
+					but the majority have suffered alteration in some form, by
+					injected humour, or randomised words which don't look even
+					slightly believable.
+				  </p>
+				  <button class="bg-white text-orange-700 px-3 py-2 rounded-lg">
+					Show All
+				  </button>
+				</div>
+			  </div>
+	
+			  <!-- Reviews Card Section -->
+			  <div class="relative py-24">
+				<!-- Middle Card -->
+				<div class="absolute z-10 top-44 md:top-52">
+				  <div
+					class="h-56 w-full md:w-3/4 bg-white text-black rounded-lg flex items-center px-5"
+				  >
+					<div class="absolute -top-5 -left-5 bg-white rounded-full">
+					  <img class="p-1" src="./images/client.png" alt="" />
+					</div>
+					<div>
+					  <p class="text-gray-500 mb-5">
+						We are providing the best and suitable home insurance
+						services for the people who are interested to treatment
+					  </p>
+					  <h1 class="font-bold">Ilham Yuda</h1>
+					  <small class="font-bold text-gray-500">Businessman</small>
+					</div>
+				  </div>
+				</div>
+	
+				<!-- top card -->
+				<div
+				  class="relative left-8 md:left-32 h-56 w-full md:w-3/4 bg-white text-black rounded-lg flex items-center px-5 opacity-40"
+				>
+				  <div class="absolute -top-5 -left-5 bg-white rounded-full">
+					<img class="p-1" src="./images/client.png" alt="" />
+				  </div>
+				  <div>
+					<p class="text-gray-500 mb-5">
+					  We are providing the best and suitable home insurance services
+					  for the people who are interested to treatment
+					</p>
+					<h1 class="font-bold">Ilham Yuda</h1>
+					<small class="font-bold text-gray-500">Businessman</small>
+				  </div>
+				</div>
+	
+				<!-- bottom card -->
+				<div
+				  class="relative left-8 md:left-32 top-10 h-56 w-full md:w-3/4 bg-white text-black rounded-lg flex items-center px-5 opacity-40"
+				>
+				  <div class="absolute -top-5 -left-5 bg-white rounded-full">
+					<img class="p-1" src="./images/client.png" alt="" />
+				  </div>
+				  <div>
+					<p class="text-gray-500 mb-5">
+					  We are providing the best and suitable home insurance services
+					  for the people who are interested to treatment
+					</p>
+					<h1 class="font-bold">Ilham Yuda</h1>
+					<small class="font-bold text-gray-500">Businessman</small>
+				  </div>
+				</div>
+			  </div>
+			</div>
+		  </section>
+		  <!-- Reviews Section ends here -->
+
+
+		<!-- news Section starts here -->
+		<section class="mb-20">
+			<h1 class="text-3xl text-center p-6 font-bold">News & Events</h1>
+			<p class="text-gray-500 text-center mb-12">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis ab magnam provident, dicta similique dolor praesentium culpa repellat perspiciatis laborum.</p>
+
+			<div class="flex gap-5 flex-col md:text-center lg:flex-row">
+				<!-- card 1 -->
+				<div class="p-2 border border-gray-300 rounded-lg">
+					<img class="md:mx-auto p-3 rounded-sm" src="images/news-1.png" alt="">
+					<p class="text-gray-500">feb 05, 2027</p>
+					<h1 class="text-xl font-bold">Collecting 8 points for discount</h1>
+					<p class="text-gray-500">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis ab magnam provident, dicta similique dolor praesentium culpa repellat perspiciatis laborum.</p>
+					<p class="font-bold">Learn more</p>
+				</div>
+
+				<!-- card 2 -->
+				<div class="p-2 border border-gray-300 rounded-lg">
+					<img class="md:mx-auto p-3 rounded-sm" src="images/news-2.png" alt="">
+					<p class="text-gray-500">feb 05, 2027</p>
+					<h1 class="text-xl font-bold">Collecting 8 points for discount</h1>
+					<p class="text-gray-500">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis ab magnam provident, dicta similique dolor praesentium culpa repellat perspiciatis laborum.</p>
+					<p class="font-bold">Learn more</p>
+				</div>
+
+				<!-- card 03 -->
+				<div class="p-2 border border-gray-300 rounded-lg">
+					<img class="md:mx-auto p-3 rounded-sm" src="images/news-3.png" alt="">
+					<p class="text-gray-500">feb 05, 2027</p>
+					<h1 class="text-xl font-bold">Collecting 8 points for discount</h1>
+					<p class="text-gray-500">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis ab magnam provident, dicta similique dolor praesentium culpa repellat perspiciatis laborum.</p>
+					<p class="font-bold">Learn more</p>
+				</div>
+			</div>
+		</section>
+	    <!-- news Section ends here -->
     </main>
+
+
+
+	<footer class="bg-orange-100 p-8">
+		<section class="max-w-screen-xl mx-auto px-16 lg:px-28">
+			<!-- first sub section -->
+			<div class="flex justify-between">
+				<div><img src="images/cup.png" alt=""></div>
+				<div>
+					<span>Ready to get started?</span>
+					<button class="py-3 px-5 m-2 rounded text-white font-semibold bg-gradient-to-r from-orange-500 to-red-500">Get Started</button>
+				</div>
+			</div>
+			<!-- second sub section -->
+			<div class="grid grid-cols-1 md:c md:grid-cols-2 lg:grid-cols-4">
+				<!-- col 01 -->
+				<div class="py-2">
+					<h3 class="text-lg font-semibold text-gray-800">Quick Links</h3>
+					<p class="text-gray-700 no-underline py-1 pt-2" href="#">Home</p>
+					<p class="text-gray-700 no-underline py-1" href="#">Insurance</p>
+					<p class="text-gray-700 no-underline py-1" href="#">About</p>
+					<p class="text-gray-700 no-underline py-1" href="#">Privacy Policy</p>
+				</div>
+				<!-- col 02 -->
+				<div class="py-2">
+					<h3 class="text-lg font-semibold text-gray-800">Our Services</h3>
+					<p class="text-gray-700 no-underline py-1 pt-2" href="#">Home</p>
+					<p class="text-gray-700 no-underline py-1" href="#">Insurance</p>
+					<p class="text-gray-700 no-underline py-1" href="#">About</p>
+					<p class="text-gray-700 no-underline py-1" href="#">Privacy Policy</p>
+				</div>
+				<!-- col 03 -->
+				<div class="py-2">
+					<h3 class="text-lg font-semibold text-gray-800">Help</h3>
+					<p class="text-gray-700 no-underline py-1 pt-2" href="#">Home</p>
+					<p class="text-gray-700 no-underline py-1" href="#">Insurance</p>
+					<p class="text-gray-700 no-underline py-1" href="#">About</p>
+					<p class="text-gray-700 no-underline py-1" href="#">Privacy Policy</p>
+				</div>
+				<!-- col 04 -->
+			</div>
+		</section>
+	</footer>
 </body>
 </html>
